Change play promises behaviour in the load algorithm.

This is implementing the changes from the following whatwg/html PR:
https://github.com/whatwg/html/pull/1621

BUG=592158,630622
R=foolip@chromium.org

Review-Url: https://codereview.chromium.org/2199363002
Cr-Commit-Position: refs/heads/master@{#409793}

Former-commit-id: e2c683031c305abcb6dab162832f95fa9b71545e